@@ -1,0 +1,17 @@
+/*
+ * $Log: mktempfile.h,v $
+ * Revision 1.1  2021-06-09 19:32:50+05:30  Cprogrammer
+ * Initial revision
+ *
+ */
+#ifndef MAKETMPFILE_H
+#define MAKETMPFILE_H
+
+#ifndef	lint
+static char     sccsidmktempfileh[] = "$Id: mktempfile.h,v 1.1 2021-06-09 19:32:50+05:30 Cprogrammer Exp mbhangui $";
+#endif
+
+int             mktempfile(int);
+
+#endif
+
