@@ -148,10 +148,12 @@ necessary to develop qmail applications
 %attr(644,root,root)                    %{_prefix}/include/qmail/rewritehost.h
 %attr(644,root,root)                    %{_prefix}/include/qmail/leapsecs.h
 %attr(644,root,root)                    %{_prefix}/include/qmail/lock.h
+%attr(644,root,root)                    %{_prefix}/include/qmail/makeargs.h
 %attr(644,root,root)                    %{_prefix}/include/qmail/makesalt.h
 %attr(644,root,root)                    %{_prefix}/include/qmail/md5.h
 %attr(644,root,root)                    %{_prefix}/include/qmail/mess822.h
 %attr(644,root,root)                    %{_prefix}/include/qmail/mkpasswd.h
+%attr(644,root,root)                    %{_prefix}/include/qmail/mktempfile.h
 %attr(644,root,root)                    %{_prefix}/include/qmail/ndelay.h
 %attr(644,root,root)                    %{_prefix}/include/qmail/now.h
 %attr(644,root,root)                    %{_prefix}/include/qmail/open.h
