@@ -26,6 +26,9 @@ Release 1.1 Start 14/02/2021
 13. default.configure: added --syscondir=/etc/indimail
 - 01/06/2021
 14. added qtime() function - qtime.c, qtime.h, qtime.3
+- 10/06/2021
+15. fixed compiler warnings
+16. added makeargs.c, mktempfile.c
 
 * Sunday 14 February 2021 11:27:21 PM IST
 Release 1.0 Start 21/05/2020
